<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLoginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"

    tools:context=".activity.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/registerNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:elevation="1dp"
        android:fillViewport="true"
        android:overScrollMode="never"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_45sdp"
                android:layout_marginRight="@dimen/_45sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvemailloginText"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/emaillogin"
                        android:textColor="@color/text_primary"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="normal" />
                    <!--shreyansh.sharma@gmail.com-->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editEmailMobilenoLogin"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/input_box_onboarding"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/emaillogin1"
                        android:text=""
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColor="@color/text_primary"
                        android:textColorHint="@color/text_primary"
                        android:cursorVisible="true"
                        android:textCursorDrawable="@drawable/cursor_drawable"
                        android:textSize="@dimen/_15ssp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPwdloginText"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/pwd2"
                        android:textColor="@color/text_primary"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/input_box_onboarding">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/editPasswordLogin"
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@null"
                            android:cursorVisible="true"
                            android:ellipsize="end"
                            android:hint="@string/pwd"
                            android:text=""
                            android:layout_weight="1"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLength="16"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/_10sdp"
                            android:singleLine="true"
                            android:textColor="@color/text_primary"
                            android:textColorHint="@color/text_primary"
                            android:textCursorDrawable="@drawable/cursor_drawable"
                            android:textSize="@dimen/_15ssp" />
                        <CheckBox
                            android:gravity="center_vertical"
                            android:id="@+id/ch_sign_in"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layoutDirection="rtl"
                            android:paddingRight="1dp"
                            android:layout_gravity="center"
                            android:button="@drawable/showhidepwd_signup"
                            android:buttonTint="@color/btn_color"
                            />

                    </LinearLayout>



                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.chand.progressbutton.ProgressButton
                    android:id="@+id/btnSiginIn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/roboto_regular"
                    app:p_arrowVisible="false"
                    app:p_backgroundTint="@color/btn_color"
                    app:p_cornerRadius="@dimen/_4sdp"
                    app:p_fontFamily="roboto_regular"
                    app:p_progressColor="@color/btn_color"
                    app:p_style="progressBar"
                    app:p_text="@string/login"
                    app:p_textColor="@color/white"
                    app:p_textSize="@dimen/_22ssp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSumbitReg"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    app:strokeColor="@color/btn_color"
                    app:strokeWidth="1dp"

                    android:theme="@style/Theme.MaterialComponents"
                    android:text="@string/Register"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_color"
                    android:textSize="@dimen/_16ssp"
                    app:cornerRadius="@dimen/_4sdp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>